--- a/src/components/Neighbors/CountryCard.module.scss
+++ b/src/components/Neighbors/CountryCard.module.scss
@@ -1,17 +1,16 @@
-.card {
-  $box-radius: 20px;
+@import "../../styles/variables";
+
+.country-card {
   display: flex;
   flex-direction: column;
   text-align: center;
-  border-radius: $box-radius;
   height: 200px;
   width: 135px;
   justify-content: space-evenly;
   flex-grow: 1;
-  margin: 5px;
 
   &:hover {
-    background-color: gray;
+    background-color: $selcted-card-background-color;
     cursor: pointer;
     transition: background-color ease-out 0.4s;
   }
@@ -24,18 +23,18 @@
     font-size: 1.2em;
   }
 
-  &.neighbour-is-valid {
-    background-color: lightgrey;
+  &.correct {
+    background-color: $selcted-card-background-color;
     border: 4px solid green !important;
   }
 
-  &.neighbour-is-invalid {
-    background-color: lightgrey;
+  &.incorrect {
+    background-color: $selcted-card-background-color;
     border: 4px solid red;
   }
 
-  &.neighbour-was-correct {
-    background-color: lightgrey;
+  &.not-found {
+    background-color: $selcted-card-background-color;
     border: 4px solid orange;
   }
 }
