Add different font-family only for emojis

--- a/src/global.scss
+++ b/src/global.scss
@@ -11,7 +11,7 @@
 
 body {
   margin: 0px;
-  font-family: "Open Sans", "TwemojiMozilla";
+  font-family: "Open Sans";
   background-color: #fff;
   color: #444;
 }
