--- a/src/components/Header/Title/Title.module.scss
+++ b/src/components/Header/Title/Title.module.scss
@@ -20,3 +20,9 @@
 		font-family: "TwemojiMozilla";
 	}
 }
+
+.language-selector {
+	margin-left: auto;
+	margin-right: 1.5em;
+	align-self: center;
+}
